--- a/general-conditions.html
+++ b/general-conditions.html
@@ -14,35 +14,37 @@
     <div class="info">
       <section class="info-input">
         <h2>General conditions:</h2>
-        <div class="lyrics">
-            <p>Ой у лузі червона калина похилилася,</p>
-            <p>Чогось наша славна Україна зажурилася.</p>
-            <p>А ми тую червону калину підіймемо,</p>
-            <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
-        </div>
-        <div class="lyrics">
-            <p>Марширують наші добровольці у кривавий тан</p>
-            <p>Визволяти братів-українців з ворожих кайдан.</p>
-            <p>А ми тую червону калину підіймемо,</p>
-            <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
-        </div>
-        <div class="lyrics">
-            <p>Не хилися, червона калино, маєш білий цвіт.</p>
-            <p>Не журися, славна Україно, маєш вільний рід.</p>
-            <p>А ми тую червону калину підіймемо,</p>
-            <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
-        </div>
-        <div class="lyrics">
-            <p>Гей, у полі ярої пшениці золотистий лан</p>
-            <p>Розпочали стрільці українські з ворогами тан!</p>
-            <p>А ми тую червону калину підіймемо,</p>
-            <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
-        </div>
-        <div class="lyrics">
-            <p>Як повіє буйнесенький вітер з широких степів,</p>
-            <p>Та й прославить по всій Україні січових стрільців.</p>
-            <p>А ми тую червону калину підіймемо,</p>
-            <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
+        <div class="lyrics-center">
+            <div class="lyrics">
+                <p>Ой у лузі червона калина похилилася,</p>
+                <p>Чогось наша славна Україна зажурилася.</p>
+                <p>А ми тую червону калину підіймемо,</p>
+                <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
+            </div>
+            <div class="lyrics">
+                <p>Марширують наші добровольці у кривавий тан</p>
+                <p>Визволяти братів-українців з ворожих кайдан.</p>
+                <p>А ми тую червону калину підіймемо,</p>
+                <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
+            </div>
+            <div class="lyrics">
+                <p>Не хилися, червона калино, маєш білий цвіт.</p>
+                <p>Не журися, славна Україно, маєш вільний рід.</p>
+                <p>А ми тую червону калину підіймемо,</p>
+                <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
+            </div>
+            <div class="lyrics">
+                <p>Гей, у полі ярої пшениці золотистий лан</p>
+                <p>Розпочали стрільці українські з ворогами тан!</p>
+                <p>А ми тую червону калину підіймемо,</p>
+                <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
+            </div>
+            <div class="lyrics">
+                <p>Як повіє буйнесенький вітер з широких степів,</p>
+                <p>Та й прославить по всій Україні січових стрільців.</p>
+                <p>А ми тую червону калину підіймемо,</p>
+                <p>А ми нашу славну Україну, гей, гей, розвеселимо!</p>
+            </div>
         </div>
         <section class="buttons">
             <a class="back" href="./application.html">Back</a>
