add form tag, fixed responsive design

--- a/application.html
+++ b/application.html
@@ -14,12 +14,14 @@
     <div class="info">
       <section class="info-input">
         <h2>Application:</h2>
-        <input type="date" placeholder="Preferred entrance date">
-        <input type="number" placeholder="Number of people">
-        <section class="buttons">
-            <a class="back" href="./contact-info.html">Back</a>
-            <a class="next" href="./general-conditions.html">Next</a>
-        </section>
+        <form>
+          <input type="date" placeholder="Preferred entrance date: ">
+          <input type="number" placeholder="Number of people">
+          <section class="buttons">
+              <a class="back" href="./contact-info.html">Back</a>
+              <a class="next" href="./general-conditions.html">Next</a>
+          </section>
+        </form>
       </section>
     </div>
     <div class="horizontal-position">
