--- a/contact-info.html
+++ b/contact-info.html
@@ -14,9 +14,12 @@
     <div class="info">
       <section class="info-input">
         <h2>Contact information:</h2>
-        <input type="email" placeholder="E-mail">
-        <input type="tel" placeholder="Phone">
-        <input type="tel" placeholder="Mobile">
+        <form>
+          <input type="email" placeholder="E-mail">
+          <input type="tel" placeholder="Phone">
+          <input type="tel" placeholder="Mobile">
+        </form>
+        
         <section class="buttons">
             <a class="back" href="./address.html">Back</a>
             <a class="next" href="./application.html">Next</a>
